--- a/Main/Addins/Outlook2010CV/Templates/Outlook2010.xml
+++ b/Main/Addins/Outlook2010CV/Templates/Outlook2010.xml
@@ -3,7 +3,7 @@
     <ribbon>
         <tabs>
             <tab id="ControlledVocabTab" label="Controlled Vocab">
-                <group label="Email With Care" id="ControlledVocabButtons" >
+                <group label="Communicate With Care" id="ControlledVocabButtons" >
                     DLBUTTONPLACHOLDER_DONOTREMOVE
                 </group>
             </tab>
