--- a/Main/WindowsClient/App.xaml
+++ b/Main/WindowsClient/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="ControlledVocabulary.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             Startup="App_StartUp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
