--- a/Main/WindowsClient/MainWindow.xaml
+++ b/Main/WindowsClient/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ControlledVocabulary.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Controlled Vocabulary" Height="138" Width="448" WindowStartupLocation="CenterScreen" Icon="/Controlled%20Vocabulary%20Windows%20Client;component/Images/ControlledVocabulary.ico" IsEnabled="True" Loaded="Window_Loaded" MinWidth="448" MinHeight="138" SizeChanged="Window_SizeChanged" MaxHeight="138" MaxWidth="2048">
+        Title="Controlled Vocab" Height="138" Width="448" WindowStartupLocation="CenterScreen" Icon="/Controlled%20Vocabulary%20Windows%20Client;component/Images/ControlledVocabulary.ico" IsEnabled="True" Loaded="Window_Loaded" MinWidth="448" MinHeight="138" SizeChanged="Window_SizeChanged" MaxHeight="138" MaxWidth="2048">
     <Grid>
         <Menu Height="23" Name="menu1" VerticalAlignment="Top" IsEnabled="True"></Menu>
         <Image Height="53" HorizontalAlignment="Left" Margin="0,29,0,0" Name="image1" Stretch="Fill" VerticalAlignment="Top" Width="426" Source="/Controlled%20Vocabulary%20Windows%20Client;component/Images/newlogo.png" />
@@ -29,7 +29,7 @@
                 </LinearGradientBrush>
             </Label.Foreground>
         </Label>
-        <Label Content="CodePlex" Cursor="Hand" Height="29" Margin="324,76,0,0" Name="labelCodePlex" VerticalAlignment="Top" HorizontalAlignment="Left" Width="67" MouseLeftButtonUp="labelCodePlex_MouseLeftButtonUp">
+        <Label Content="GitHub" Cursor="Hand" Height="29" Margin="324,76,0,0" Name="labelGitHub" VerticalAlignment="Top" HorizontalAlignment="Left" Width="67" MouseLeftButtonUp="labelGitHub_MouseLeftButtonUp">
             <Label.Foreground>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0.009" />
