--- a/Main/WindowsClient/Manager.xaml
+++ b/Main/WindowsClient/Manager.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ControlledVocabulary.Manager"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Controlled Vocabulary - Manager" Height="480" Width="489" Loaded="Window_Loaded" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" IsEnabled="True" Icon="/Controlled%20Vocabulary%20Windows%20Client;component/Images/ControlledVocabulary.ico" Closing="Window_Closing">
+        Title="Controlled Vocab - Manager" Height="480" Width="489" Loaded="Window_Loaded" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" IsEnabled="True" Icon="/Controlled%20Vocabulary%20Windows%20Client;component/Images/ControlledVocabulary.ico" Closing="Window_Closing">
     <Grid>
         <Image Height="53" HorizontalAlignment="Left" Margin="12,0,0,0" Name="image1" Source="/Controlled%20Vocabulary%20Windows%20Client;component/Images/newlogo.png" Stretch="Fill" VerticalAlignment="Top" Width="426" />
         <TabControl Name="tabControl1" TabStripPlacement="Top" Margin="7,59,0,0" HorizontalAlignment="Left" Width="466" Height="375" VerticalAlignment="Top">
