--- a/Main/WindowsClient/Manager.xaml
+++ b/Main/WindowsClient/Manager.xaml
@@ -1,35 +1,34 @@
 ﻿<Window x:Class="ControlledVocabulary.Manager"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Controlled Vocab - Manager" Height="621" Width="447" Loaded="Window_Loaded" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" IsEnabled="True" Icon="/Controlled%20Vocabulary%20Windows%20Client;component/Images/ControlledVocabulary.ico" Closing="Window_Closing">
+        Title="Controlled Vocab - Manager" Height="642" Width="449" Loaded="Window_Loaded" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" IsEnabled="True" Icon="/Controlled%20Vocabulary%20Windows%20Client;component/Images/ControlledVocabulary.ico" Closing="Window_Closing">
   <Grid Margin="0,0,0,1">
     <Label Content="Outlook is running. Restart Outlook to see changes." HorizontalAlignment="Left" Visibility="Hidden" Height="29"  x:Name="labelOutlookRunning"  VerticalAlignment="Top" Width="320" Foreground="Red" FontWeight="Bold" Margin="497,314,0,0" />
-    <TextBox Height="23" HorizontalAlignment="Left" Margin="18,263,0,0" x:Name="textBoxDiscover" VerticalAlignment="Top" Width="402" />
-    <Label Content="Path / URL" Height="28" Margin="10,239,0,0" x:Name="label4" VerticalAlignment="Top" HorizontalAlignment="Left" Width="114" />
-    <ListBox HorizontalAlignment="Left" ItemsSource="{Binding checkedListItems}" Margin="18,324,0,0" x:Name="listboxDiscovered" Width="295" Height="69" VerticalAlignment="Top">
+    <TextBox Height="23" HorizontalAlignment="Left" Margin="18,268,0,0" x:Name="textBoxDiscover" VerticalAlignment="Top" Width="402" />
+    <Label Content="Path / URL" Height="28" Margin="15,240,0,0" x:Name="label4" VerticalAlignment="Top" HorizontalAlignment="Left" Width="114" />
+    <ListBox HorizontalAlignment="Left" ItemsSource="{Binding checkedListItems}" Margin="17,333,0,0" x:Name="listboxDiscovered" Width="402" Height="69" VerticalAlignment="Top">
       <ListBox.ItemTemplate>
         <HierarchicalDataTemplate>
           <CheckBox Content="{Binding Name}" IsChecked="{Binding IsChecked}" />
         </HierarchicalDataTemplate>
       </ListBox.ItemTemplate>
     </ListBox>
-    <Button Content="Discover" Height="23" HorizontalAlignment="Left" Margin="320,289,0,0" x:Name="buttonDiscover" VerticalAlignment="Top" Width="100" Click="buttonDiscover_Click_1" />
-    <Button Content="Add Selected" Height="23" HorizontalAlignment="Left" Margin="320,370,0,0" x:Name="buttonAddDiscovered" VerticalAlignment="Top" Width="100" Click="buttonAddDiscovered_Click_1" />
-    <Label Content="Discovered Buttons" Height="28" Margin="10,296,0,0" x:Name="label2" VerticalAlignment="Top" HorizontalAlignment="Left" Width="113" />
-    <Label Content="Your Buttons are installed in" Height="28" Margin="15,28,0,0" x:Name="label4_Copy" VerticalAlignment="Top" HorizontalAlignment="Left" Width="207" />
-    <Label Content="here" Height="28" HorizontalAlignment="Left" x:Name="labelAppData" VerticalAlignment="Top" Cursor="Hand" MouseLeftButtonUp="labelAppData_MouseLeftButtonUp" Foreground="Blue" Margin="166,28,0,0" />
-    <ListBox HorizontalAlignment="Left" x:Name="listBoxButtons" Width="402" Margin="18,83,0,0" Height="119" VerticalAlignment="Top" />
-    <Button Content="Remove Selected" HorizontalAlignment="Left" Margin="320,55,0,0" x:Name="buttonRemove" Width="100" Click="buttonRemove_Click" Height="23" VerticalAlignment="Top" />
-    <Label Content="The following Buttons are installed" Height="28" Margin="15,55,0,0" x:Name="label4_Copy1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="269" />
-    <Label Content="Discover new Buttons" Background="#FFFBFAFA" Height="28" Margin="0,207,0,0" x:Name="label4_Copy2" VerticalAlignment="Top" FontSize="14" HorizontalAlignment="Left" Width="455" />
-    <Label Content="Existing Buttons" Height="28" x:Name="label4_Copy3" VerticalAlignment="Top" FontSize="14" HorizontalAlignment="Left" Width="455" Background="#FFFBFAFA" />
-    <Label Content="Options" Height="28" Margin="0,398,0,0" x:Name="label4_Copy4" VerticalAlignment="Top" FontSize="14" HorizontalAlignment="Left" Width="455" Background="#FFFBFAFA" />
-    <CheckBox Checked="checkBoxCopySubject_Checked" Content="Copy Subject to Clipboard (no mail client will be called)" Height="16" HorizontalAlignment="Left" IsThreeState="False" Margin="44,456,0,0" x:Name="checkBoxCopySubject" VerticalAlignment="Top" Unchecked="checkBoxCopySubject_Unchecked" />
-    <CheckBox Checked="checkBoxCallMailto_Checked" Content="Call mailto: protocol rather than Outlook" Height="16" HorizontalAlignment="Left" IsChecked="True" Margin="44,478,0,0" x:Name="checkBoxCallMailto" VerticalAlignment="Top" Unchecked="checkBoxCallMailto_Unchecked" />
-    <CheckBox Content="AutoUpdate Buttons" Height="16" HorizontalAlignment="Left" IsChecked="True" Margin="24,561,0,0" x:Name="checkBoxAutoUpdate" VerticalAlignment="Top" Checked="checkBoxAutoUpdate_Checked" Unchecked="checkBoxAutoUpdate_Unchecked" />
-    <Button Content="Check for updates now" Height="23" HorizontalAlignment="Left" Margin="287,554,0,0" x:Name="buttonCheckForUpdates" VerticalAlignment="Top" Width="133" Click="buttonCheckForUpdates_Click" />
-    <TextBox Height="23" HorizontalAlignment="Left" Margin="24,528,0,0" x:Name="textBoxMasterEmailAccount" VerticalAlignment="Top" Width="255" />
-    <Label Content="Always send using this Account" Height="28" HorizontalAlignment="Left" Margin="24,500,0,0" x:Name="label1" VerticalAlignment="Top" />
-    <Label Content="Client-Only" Height="28" HorizontalAlignment="Left" Margin="18,431,0,0" x:Name="label1_Copy" VerticalAlignment="Top" />
+    <Button Content="Discover" Height="23" HorizontalAlignment="Left" Margin="320,240,0,0" x:Name="buttonDiscover" VerticalAlignment="Top" Width="100" Click="buttonDiscover_Click_1" />
+    <Button Content="Add Selected" Height="23" HorizontalAlignment="Left" Margin="319,305,0,0" x:Name="buttonAddDiscovered" VerticalAlignment="Top" Width="100" Click="buttonAddDiscovered_Click_1" />
+    <Label Content="Discovered Buttons" Height="28" Margin="10,305,0,0" x:Name="label2" VerticalAlignment="Top" HorizontalAlignment="Left" Width="113" />
+    <Label Content="Your Buttons are installed" Height="28" Margin="15,33,0,0" x:Name="label4_Copy" VerticalAlignment="Top" HorizontalAlignment="Left" Width="207" />
+    <Label Content="here" Height="28" HorizontalAlignment="Left" x:Name="labelAppData" VerticalAlignment="Top" Cursor="Hand" MouseLeftButtonUp="labelAppData_MouseLeftButtonUp" Foreground="Blue" Margin="153,33,0,0" />
+    <ListBox HorizontalAlignment="Left" x:Name="listBoxButtons" Width="402" Margin="18,61,0,0" Height="131" VerticalAlignment="Top" />
+    <Button Content="Remove Selected" HorizontalAlignment="Left" Margin="320,33,0,0" x:Name="buttonRemove" Width="100" Click="buttonRemove_Click" Height="23" VerticalAlignment="Top" />
+    <Label Content="Discover new Buttons" Background="WhiteSmoke" Height="28" Margin="0,207,0,0" x:Name="label4_Copy2" VerticalAlignment="Top" FontSize="14" HorizontalAlignment="Left" Width="455" />
+    <Label Content="Existing Buttons" Height="28" x:Name="label4_Copy3" VerticalAlignment="Top" FontSize="14" HorizontalAlignment="Left" Width="455" Background="WhiteSmoke" />
+    <Label Content="Options" Height="28" Margin="0,411,-24,0" x:Name="label4_Copy4" VerticalAlignment="Top" FontSize="14" HorizontalAlignment="Left" Width="467" Background="WhiteSmoke" />
+    <CheckBox Checked="checkBoxCopySubject_Checked" Content="Copy Subject to Clipboard (no mail client will be called)" Height="16" HorizontalAlignment="Left" IsThreeState="False" Margin="44,469,0,0" x:Name="checkBoxCopySubject" VerticalAlignment="Top" Unchecked="checkBoxCopySubject_Unchecked" />
+    <CheckBox Checked="checkBoxCallMailto_Checked" Content="Call mailto: protocol rather than Outlook" Height="16" HorizontalAlignment="Left" IsChecked="True" Margin="44,491,0,0" x:Name="checkBoxCallMailto" VerticalAlignment="Top" Unchecked="checkBoxCallMailto_Unchecked" />
+    <CheckBox Content="AutoUpdate Buttons" Height="16" HorizontalAlignment="Left" IsChecked="True" Margin="24,574,0,0" x:Name="checkBoxAutoUpdate" VerticalAlignment="Top" Checked="checkBoxAutoUpdate_Checked" Unchecked="checkBoxAutoUpdate_Unchecked" />
+    <Button Content="Check for updates" Height="23" HorizontalAlignment="Left" Margin="320,567,0,0" x:Name="buttonCheckForUpdates" VerticalAlignment="Top" Width="100" Click="buttonCheckForUpdates_Click" />
+    <TextBox Height="23" HorizontalAlignment="Left" Margin="24,541,0,0" x:Name="textBoxMasterEmailAccount" VerticalAlignment="Top" Width="396" />
+    <Label Content="Always send using this Account" Height="28" HorizontalAlignment="Left" Margin="24,513,0,0" x:Name="label1" VerticalAlignment="Top" />
+    <Label Content="Client-Only" Height="28" HorizontalAlignment="Left" Margin="18,444,0,0" x:Name="label1_Copy" VerticalAlignment="Top" />
   </Grid>
 </Window>
